--- a/coderhouse_defazio_backend/Back/package.json
+++ b/coderhouse_defazio_backend/Back/package.json
@@ -23,13 +23,17 @@
     "latest": "^0.2.0",
     "minimist": "^1.2.6",
     "mongoose": "^6.3.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16",
     "npm": "^7.5.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "sqlite": "^4.0.25",
     "sqlite3": "^5.0.2",
+    "twilio": "^3.77.3",
     "uniqid": "^5.4.0",
     "web-vitals": "^1.1.2",
     "winston": "^3.7.2",
