--- a/coderhouse_defazio_backend/Back/package.json
+++ b/coderhouse_defazio_backend/Back/package.json
@@ -10,7 +10,7 @@
     "autocannon": "^7.9.0",
     "babel": "^6.23.0",
     "bcrypt": "^5.0.1",
-    "better-sqlite3": "^7.5.0",
+    "better-sqlite3": "^7.5.3",
     "bootstrap": "^5.1.1",
     "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
@@ -19,7 +19,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
-    "knex": "^1.0.4",
+    "knex": "^1.0.7",
     "latest": "^0.2.0",
     "minimist": "^1.2.6",
     "mongoose": "^6.3.0",
@@ -40,15 +40,16 @@
     "winston-levelonly": "^1.0.3"
   },
   "scripts": {
-    "server": "nodemon --inspect ./src/inicioSrv.js 8080",
+    "server": "nodemon --inspect ./src/inicioSrv.js --port 8080",
     "cluster": "node ./cluster.js 8081",
     "pm2": "pm2 start ./pm2.config.cjs",
-    "4ever": "forever start ./src/inicioSrv.js 8085",
-    "start": "nodemon --inspect ./src/inicioSrv.js 8080",
-    "prof": "node --prof ./src/inicioSrv.js 8080",
+    "4ever": "forever start ./src/inicioSrv.js --port 8085",
+    "start": "nodemon --inspect ./src/inicioSrv.js --port 8080  --db mongo",
+    "startsql": "nodemon --inspect ./src/inicioSrv.js --port 8080  --db sqlite",
+    "prof": "node --prof ./src/inicioSrv.js --port 8080",
     "artillery": "artillery quick --count 500 -n 200 \"http://localhost:8080/api/info\" > result_artillery.txt",
     "leerProf": "node --prof-process result.log > result-prof.txt",
-    "0x": "0x ./src/inicioSrv.js 8080",
+    "0x": "0x ./src/inicioSrv.js --port 8080",
     "test": "node ./src/utils/prueba.js"
   },
   "devDependencies": {
