--- a/coderhouse_defazio_backend/Back/package.json
+++ b/coderhouse_defazio_backend/Back/package.json
@@ -19,7 +19,9 @@
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
+    "graphql": "^15.3.0",
     "knex": "^1.0.7",
     "latest": "^0.2.0",
     "minimist": "^1.2.6",
